# mbus

./: CMakeLists.txt  README.md  build.sh  httptest.js  mbusc  mbusd  test  test.js  test1.js
node/: binding.gyp  io_message.cc  io_message.h  mbus.cc  mbusObj.cc  mbusObj.cc.bak  mbusObj.h  message.cc  message.h  test.js  util.cc  util.h
node/lib/: boost_1_57_0
nodejs/: binding.gyp  build.sh
nodejs/node/: mbusObj.h
src/: client.cpp  mbus.cpp  server.cpp  test.cpp
src/client/: client.cpp  client.hpp
src/conf/: conf.hpp
src/connection/: connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp
src/message/: io_message.cpp  io_message.hpp  message.cpp  message.hpp  message_parser.cpp  message_parser.hpp
src/server/: connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  mbus.cpp  message.hpp  message_encode.cpp  message_encode.hpp  message_handler.cpp  message_handler.hpp  message_parser.cpp  message_parser.hpp  server.cpp  server.hpp
src/share/: msg_queue.cpp  msg_queue.hpp  msg_queue_manager.cpp  msg_queue_manager.hpp  my_queue.cpp  my_queue.hpp  share_memory.cpp  share_memory.hpp
src/shareObject/: mbusso.hpp
src/test/: test.cpp  test.hpp
src/util/: util.cpp  util.hpp
test/: httptest1.js
